--- a/2212.14551/models-compare-v2.tex
+++ b/2212.14551/models-compare-v2.tex
@@ -230,7 +230,7 @@ in terms of which the canonical form of the action becomes
 \beq
 S=\int dt d^{D-1}x \sqrt q \left(\pi \dot\phi  - \calh\right)\ ,
 \eeq
-with hamiltonian
+with Hamiltonian
 \beq\label{matH}
 H =  \int d^{D-1} x \sqrt q \calh= \int d^{D-1} x \sqrt q \left[ \frac{N}{2}\left(\pi^2+q^{ij}\partial_i\phi \partial_j\phi\right) + \pi N^i \partial_i\phi \right] \ .
 \eeq 
@@ -264,7 +264,7 @@ If the mode bases are taken to be orthonormal, $(\gamma_A,\gamma_B)=(\gamma_\tA,
 along with vanishing commutators between in and up operators, 
 and Fock space states may be constructed by acting with raising operators on the vacuum $|0\rangle$ annihilated by $a_A$ and $a_\tA$.  In occupation number basis, these take the form $|\{n_A\},\{n_\tA\}\rangle$.
 
-For a ``gauge-fixing" specified by a  given slicing, determining $(N, N^i, q_{ij})$, the hamiltonian \eqref{matH} can be rewritten in terms of the annihilation and creation operators by substitution of \eqref{piphiexps}.\footnote{Different such descriptions of the state arising from different gauge fixings are then expected to be related by unitarity transformations, with an analogy to change of picture.  One approach to arguing for such equivalence is expected to be based on the Hadamard behavior of the state\cite{KaWa}.} This gives an expression
+For a ``gauge-fixing" specified by a  given slicing, determining $(N, N^i, q_{ij})$, the Hamiltonian \eqref{matH} can be rewritten in terms of the annihilation and creation operators by substitution of \eqref{piphiexps}.\footnote{Different such descriptions of the state arising from different gauge fixings are then expected to be related by unitarity transformations, with an analogy to change of picture.  One approach to arguing for such equivalence is expected to be based on the Hadamard behavior of the state\cite{KaWa}.} This gives an expression
 \beq\label{Hama}
 H = \sum_{A,A'} \left(A_{AA'} a^\dagger_A a_{A'} + B_{AA'} a^\dagger_A a^\dagger_{A'} + c.c. \right) + (A\rightarrow \tilde A)\ ,
 \eeq
@@ -275,7 +275,7 @@ U(t_2,t_1)= e^{-i\int_{t_1}^{t_2} dt H}\ .
 \eeq
 
 In addition to standard propagation described by $a^\dagger a$ terms, $H$ creates paired excitations through the $a^\dagger a^\dagger$ terms.  One way to understand the detailed structure of this pairing is to rewrite the state in a basis of energy eigenmodes, as described above.  
-Then the hamiltonian takes the form\cite{GiPe1}
+Then the Hamiltonian takes the form\cite{GiPe1}
 \beq\label{Eham}
 H= \sum_{lm} \int \frac{d\omega}{4 \pi \omega} \omega (b_{\omega lm}^{\dagger}b_{\omega lm} - \hat b_{\omega lm}^{\dagger} \hat b_{\omega lm} + \tilde b_{\omega lm}^{\dagger}\tilde b_{\omega lm}  )  \ ,
 \eeq 
@@ -284,11 +284,11 @@ Such a basis is singular, and makes contact with Hawking's original arguments\ci
 \beq\label{stateform}
 |\psi\rangle \sim\sum_{\{n_{\omega lm}\}} e^{-2\pi R\int d\omega \omega n_{\omega lm} }| \{\hat n_{\omega lm}\} \rangle |\{n_{\omega lm}\}\rangle\ .
 \eeq
-The diagonalized hamiltonian \eqref{Eham} means its evolution is trivial, with inside modes having negative energies.  If one works in a wavepacket basis of these modes, one can follow an outside mode into the asymptotic region, where it can alternately be described in terms of a regular mode.  This mode is paired with internal excitations, through \eqref{stateform}; more discussion of this argument appears in \cite{GiPe1}.  All initially regular states are argued to have the same late time behavior; differences correspond to transitory excitations that fall deep into the BH or escape to infinity, and continuing long-time production of paired excitations then follows from the uniform vacuum-like structure of such states at short distances near $r=R$.
+The diagonalized Hamiltonian \eqref{Eham} means its evolution is trivial, with inside modes having negative energies.  If one works in a wavepacket basis of these modes, one can follow an outside mode into the asymptotic region, where it can alternately be described in terms of a regular mode.  This mode is paired with internal excitations, through \eqref{stateform}; more discussion of this argument appears in \cite{GiPe1}.  All initially regular states are argued to have the same late time behavior; differences correspond to transitory excitations that fall deep into the BH or escape to infinity, and continuing long-time production of paired excitations then follows from the uniform vacuum-like structure of such states at short distances near $r=R$.
 
-In principle, one should be able to see much of this structure directly in terms of a regular basis of modes.  Since localization plays an important role, we can imagine choosing bases $\Phi_A$, $\Phi_\tA$ that are approximately localized both in space and in wavenumber.  One such basis comes from window functions in frequency\cite{Hawk,GiNe}, although one may wish to optimize localization even further by using other bases, for example a wavelet basis.  In addition, with such a basis of localized modes (modulo some rapidly falling tails), one may separate the up modes $\Phi_A$ into sets $\{\Phi_a\}$, $\{\Phi_{\hat a}\}$ of modes dominantly localized in the regions $r>R$ and $r<R$ respectively.  In such a basis it is in practice much harder to evaluate the $A$ and $B$ coefficients in the hamiltonian, and the unitary evolution operator \eqref{Uev}, although in principle they can be calculated.  But due to the approximate correspondence of these wavepackets to those of the singular basis in regions well away from the horizon, we should approximately have the same entanglement structure as in \eqref{stateform}, with approximately thermal weights, when the outside modes are at $r\gg R$; the corresponding inside modes will then typically be deep inside the BH.  Of course, in the region $r\sim R$ this description of the state differs significantly -- in the regular basis, the state looks like the vacuum for modes very close to the horizon\cite{SEHS,SE2d}.
+In principle, one should be able to see much of this structure directly in terms of a regular basis of modes.  Since localization plays an important role, we can imagine choosing bases $\Phi_A$, $\Phi_\tA$ that are approximately localized both in space and in wavenumber.  One such basis comes from window functions in frequency\cite{Hawk,GiNe}, although one may wish to optimize localization even further by using other bases, for example a wavelet basis.  In addition, with such a basis of localized modes (modulo some rapidly falling tails), one may separate the up modes $\Phi_A$ into sets $\{\Phi_a\}$, $\{\Phi_{\hat a}\}$ of modes dominantly localized in the regions $r>R$ and $r<R$ respectively.  In such a basis it is in practice much harder to evaluate the $A$ and $B$ coefficients in the Hamiltonian, and the unitary evolution operator \eqref{Uev}, although in principle they can be calculated.  But due to the approximate correspondence of these wavepackets to those of the singular basis in regions well away from the horizon, we should approximately have the same entanglement structure as in \eqref{stateform}, with approximately thermal weights, when the outside modes are at $r\gg R$; the corresponding inside modes will then typically be deep inside the BH.  Of course, in the region $r\sim R$ this description of the state differs significantly -- in the regular basis, the state looks like the vacuum for modes very close to the horizon\cite{SEHS,SE2d}.
 
-This discussion should also straightforwardly generalize to other types of matter, with spin.  The choice of the mode basis of course becomes a little more intricate, and one may also need to specify some appropriate gauge fixing.  But otherwise, one may similarly canonically quantize, and for a free field, find a hamiltonian with the same structure as \eqref{Hama}, resulting in a similar structure for the evolving quantum state, with particle production and internal/external pairing, and approximately thermal weights.  This includes the case of spin two perturbations, corresponding to fluctuations of the metric.
+This discussion should also straightforwardly generalize to other types of matter, with spin.  The choice of the mode basis of course becomes a little more intricate, and one may also need to specify some appropriate gauge fixing.  But otherwise, one may similarly canonically quantize, and for a free field, find a Hamiltonian with the same structure as \eqref{Hama}, resulting in a similar structure for the evolving quantum state, with particle production and internal/external pairing, and approximately thermal weights.  This includes the case of spin two perturbations, corresponding to fluctuations of the metric.
 
 The approach described here also has the virtue of readily (in principle) generalizing to the case of interacting fields.  This is in contrast to conventional derivations of Hawking radiation.  There, modes are traced back via free evolution to the near-horizon region, in order to match onto the short-distance behavior there, and this procedure requires significant modification in an interacting theory.  In the present treatment using regular modes, interactions simply lead to higher-order terms in \eqref{Hama}, whose contribution to evolution through \eqref{Uev} may in principle be followed.  Of course this is no simpler than the description of any other interacting QFT system, but does have the virtue of being placed on a foundation involving regular rather than singular modes.
 
@@ -312,7 +312,7 @@ of the slices, with $D_i$ the covariant derivative with respect to $q$.  The con
 \beq\label{CGact}
 S_g = \int d^D x \left( P^{ij}  \dot q_{ij} -  \calh_g\right)\ .
 \eeq
-The full hamiltonian may be written in two ways,\footnote{For more detailed expressions, see \cite{GiPe2}.} as
+The full Hamiltonian may be written in two ways,\footnote{For more detailed expressions, see \cite{GiPe2}.} as
 \beq\label{Hreln}
 H = \int d^{D-1}x (\calh_g+ \calh_m) =  \int d^{D-1}x \left(N \calC_n + N^i \calC_i\right) + H_\partial\ .
 \eeq
@@ -320,13 +320,13 @@ Here $\calh_g$ is quadratic in momenta and spatial derivatives of the metric var
 \beq
 \calC_\mu =\sqrt q \left( -\frac{G_{\mu\nu}}{8\pi G} + T_{\mu\nu} \right) n^\nu\ ,
 \eeq 
-with $\calC_n=n^\mu \calC_\mu$.   $H_\partial$ is a boundary term containing the ADM energy and momentum, and when the constraints are satisfied, $\calC_\mu=0$, the hamiltonian equals this boundary term.
+with $\calC_n=n^\mu \calC_\mu$.   $H_\partial$ is a boundary term containing the ADM energy and momentum, and when the constraints are satisfied, $\calC_\mu=0$, the Hamiltonian equals this boundary term.
 
 There are different approaches to quantization; here we take that of ``gauge-invariant canonical quantization," which is closely related to covariant gauge fixing (breaking)\cite{GiPe2}.  The canonical commutators are taken to be
 \beq\label{ccrq}
 [P^{ij}(x,t),q_{kl}(x',t)] = -i\delta^i_{(k}\delta^j_{l)}  \delta^{D-1}(x-x')\ ,
 \eeq
-with $\delta^i_{(k}\delta^j_{l)}=(\delta^i_{k}\delta^j_{l} + \delta^i_l\delta^j_{k})/2$, and evolution is generated by the hamiltonian, as summarized by the Heisenberg equations,
+with $\delta^i_{(k}\delta^j_{l)}=(\delta^i_{k}\delta^j_{l} + \delta^i_l\delta^j_{k})/2$, and evolution is generated by the Hamiltonian, as summarized by the Heisenberg equations,
 \beq\label{HEOM}
 \partial_t q_{ij} = i [H,q_{ij}]\quad ,\quad \partial_t P^{ij} = i [H,P^{ij}]\ .
 \eeq
@@ -378,7 +378,7 @@ and will solve \eqref{physS} if the underlying state $|\psi\rangle_0$ is also ta
 
 The dressing in \eqref{GIstate} has the anticipated effect of creating the linearized quantum gravitational field arising from the stress energy of the underlying state.  Again, this is not unique since it can be augmented by freely propagating gravitational waves.  Examples of this non-uniqueness are provided in \cite{DoGi1}, where one may for example consider initial conditions where the gravitational field configuration is the analog of the Coulomb field, or is instead concentrated in a single gravitational line stretching to infinity.
 
-Evolution of an initial dressed state \eqref{GIstate} will then be governed by the hamiltonian \eqref{Hreln}.  The leftmost form of this hamiltonian exhibits the terms responsible for evolving the metric perturbation and the matter perturbation, in the standard LQFT fashion.  For example, an initial linelike gravitational field like that just described will transition to an energetically favorable field like that of Coulomb, with gravitational radiation escaping to infinity.  This treatment of the leading gravitational field thus also describes the leading quantum backreaction of the underlying matter state, that is it accounts for the leading correction to the gravitational background $g_{\mu\nu}$ driven by the stress tensor of that matter state.
+Evolution of an initial dressed state \eqref{GIstate} will then be governed by the Hamiltonian \eqref{Hreln}.  The leftmost form of this Hamiltonian exhibits the terms responsible for evolving the metric perturbation and the matter perturbation, in the standard LQFT fashion.  For example, an initial linelike gravitational field like that just described will transition to an energetically favorable field like that of Coulomb, with gravitational radiation escaping to infinity.  This treatment of the leading gravitational field thus also describes the leading quantum backreaction of the underlying matter state, that is it accounts for the leading correction to the gravitational background $g_{\mu\nu}$ driven by the stress tensor of that matter state.
 
 
 
@@ -391,11 +391,11 @@ Beginning with an initial state $|\psi(0)\rangle$, the perturbatively evolved $G
 for example, by relating this to evolution of \eqref{stateform}, as described in \ref{Gez}, we find entanglement between the internal $a^\dagger_{\hat a}$ and external 
 $a^\dagger_{a}$ excitations that grows with time.  This can be characterized by introducing an appropriate regulator, {\it e.g.} cutting off near horizon excitations with wavelengths $\ll R$, and tracing out internal excitations to find a density matrix with a growing von-Neuman entropy.\footnote{See {\it e.g.} \cite{GiNe} for a simple two-dimensional example.}  Continued growth of this during the BH evolution to a value comparable to the Bekenstein-Hawking entropy $S_{BH}$ is evidence of the missing information.
 
-The leading perturbative correction to this arises from evolving the dressed version \eqref{GIstate} of the state \eqref{matstate} by the hamiltonian \eqref{Hreln}; as described, this evolution incorporates the gravitational constraints.
+The leading perturbative correction to this arises from evolving the dressed version \eqref{GIstate} of the state \eqref{matstate} by the Hamiltonian \eqref{Hreln}; as described, this evolution incorporates the gravitational constraints.
 The gravitational dressing {\it does} introduce additional subtleties in giving a precise characterization of the BH subsystem and calculation of its entropy.
 An open question is how to sharply characterize gravitational subsystems\cite{DoGi4,SGsplit,SGsub}, taking into account such effects at this and higher orders in $\kappa$.  It has even been argued that the dressing eliminates the missing information\cite{CGPR,LPRS}.  However, it can be seen that the effects of the leading perturbative dressing at best give access to the missing information that is exponentially suppressed with distance\cite{SGsub}, and there does not appear to be a controlled approximation in which an asymptotic observer can access internal information, either with Minkowski or AdS asymptotics.  Moreover, this evolution does not appear to significantly alter the trans-horizon entanglement evident in \eqref{matstate}, nor does incorporating the leading semiclassical backreaction arising from $\langle T_{\mu\nu}\rangle$.\footnote{For some investigation of the latter in two-dimensional models, see \cite{GiNe}.}   
 
-This discussion is of course expected to also readily extend to other kinds of matter fields coupled to gravity.  Moreover, treatment of evolution using a hamiltonian of the form  \eqref{matH}, \eqref{Hama} readily generalizes to incorporate interactions between fields, which {\it e.g.} introduce higher-order terms in \eqref{Hama}.    
+This discussion is of course expected to also readily extend to other kinds of matter fields coupled to gravity.  Moreover, treatment of evolution using a Hamiltonian of the form  \eqref{matH}, \eqref{Hama} readily generalizes to incorporate interactions between fields, which {\it e.g.} introduce higher-order terms in \eqref{Hama}.    
 
 The evolution can be  described as producing outgoing Hawking quanta at a rate $\calo(1/R)$, for each species of particle.  Correspondingly, the growth in the entanglement or von Neumann entropy of the BH grows also at a rate $\calo(1/R)$, and so grows to a value $\sim S_{BH}=A/4G$  by the time a significant fraction of the initial BH mass has been lost.
 
@@ -437,11 +437,11 @@ Description of these states  and their evolution can be facilitated by introduci
 \eeq
 and likewise for the hatted and tilded spaces.  
 
-A model for the energy-eigenbasis hamiltonian \eqref{Eham} is 
+A model for the energy-eigenbasis Hamiltonian \eqref{Eham} is 
 \beq\label{Hzero}
 H_0=\sum_i \omega_0 \left(\psi_i^\dagger \psi_i - \hat \psi_i^\dagger \hat \psi_i\right)\ ,
 \eeq
-with $\omega_0\sim 1/R$ a fixed energy of the Hawking quanta.  This is supplemented by a ``left-moving" hamiltonian $\tilde H_0$ which translates qubits in $\tilde \calh$.  The hamiltonian $H_0$ annihilates the Hawking state \eqref{HawkQ}.  However, the form of the state indicates that at each stage an additional pair of entangled qubits is added.  Alternately, one could, as with \eqref{stateform}, think of those factors as being present throughout the evolution, but inaccessible to low-energy observables until after timestep $N=i$.  
+with $\omega_0\sim 1/R$ a fixed energy of the Hawking quanta.  This is supplemented by a ``left-moving" Hamiltonian $\tilde H_0$ which translates qubits in $\tilde \calh$.  The Hamiltonian $H_0$ annihilates the Hawking state \eqref{HawkQ}.  However, the form of the state indicates that at each stage an additional pair of entangled qubits is added.  Alternately, one could, as with \eqref{stateform}, think of those factors as being present throughout the evolution, but inaccessible to low-energy observables until after timestep $N=i$.  
 
 The growing number of accessible qubits leads to growing entanglement of the environment of the BH with its internal states, and this entanglement is part of the description of the missing information.  As the model makes clear, and as holds in more general BH evolution beyond such models, there is a second source of BH entanglement: one may entangle an excitation in $\tilde \calh$ with another outside excitation, and then allow the first to evolve into the interior space via $\tilde H$.  Then, if the BH evaporates and disappears, both types of entanglement are associated to problematic unitarity violation.  We refer to these as type I and type II entanglement, respectively.  (Interactions in more complete models may mix these.)
 
@@ -514,7 +514,7 @@ Additional questions raised by interactions, {\it e.g.} regarding ultimate unita
 
 The approach of nonviolent unitarization \cite{SGmodels,NVNL,NVUEFT,NVNLT,NVU,BHQU} (NVU)  considers interactions between the BH Hilbert space and the environment, which can transfer information or entanglement out of the BH, but in a way that `minimally' affects the standard description of BHs, {\it e.g.} as described by infalling or other exterior observers.  Accomplishing the information transfer via interactions is similar to the physics by which the cavity described in the introduction reduces its entanglement.
 
-Qubit models for NVU are found by augmenting the hamiltonian \eqref{Hzero}: $H=H_0+\Delta H$, with two additional pieces.  The first is a term $\Delta H_I$ which describes the interactions between BH and environment states, and so can transfer entanglement from BH to environment.  The second is a term $\Delta H_{bh}$ which alters the evolution of the internal state of the BH.  The internal part of the state \eqref{HawkQ} has a ``frozen" character, in that the internal excitations simply persist unchanged; similar behavior is found for more complete states \eqref{matstate} based on nice slicings that avoid the singularity\cite{SEHS,SE2d,GiPe1}.  This is a feature of a particular gauge or picture for describing the state, which artificially retards evolution into the region near $r=0$.  In a more complete quantum description of the interior evolution, it is quite plausible that the natural dynamics ultimately leads to nontrivial evolution; {\it e.g.} it might begin mixing or scrambling the internal state on some timescale.  $\Delta H_{bh}$ is introduced to describe this aspect of evolution, which is analogous to mixing of internal states in the cavity described in the introduction.
+Qubit models for NVU are found by augmenting the Hamiltonian \eqref{Hzero}: $H=H_0+\Delta H$, with two additional pieces.  The first is a term $\Delta H_I$ which describes the interactions between BH and environment states, and so can transfer entanglement from BH to environment.  The second is a term $\Delta H_{bh}$ which alters the evolution of the internal state of the BH.  The internal part of the state \eqref{HawkQ} has a ``frozen" character, in that the internal excitations simply persist unchanged; similar behavior is found for more complete states \eqref{matstate} based on nice slicings that avoid the singularity\cite{SEHS,SE2d,GiPe1}.  This is a feature of a particular gauge or picture for describing the state, which artificially retards evolution into the region near $r=0$.  In a more complete quantum description of the interior evolution, it is quite plausible that the natural dynamics ultimately leads to nontrivial evolution; {\it e.g.} it might begin mixing or scrambling the internal state on some timescale.  $\Delta H_{bh}$ is introduced to describe this aspect of evolution, which is analogous to mixing of internal states in the cavity described in the introduction.
 
 At the level of detailed qubit models, there are multiple possibilities.  $\Delta H_{bh}$ could induce general transitions  between BH states $|\hat K\rangle$, as well as mixing with the infalling states 
  $|\tilde K\rangle$.  A particularly simple possibility is if $\Delta H_{bh}$ conserves $H_0$.  It could couple multiple internal qubits, or even have a form as simple as $\Delta H_{bh}=h_{ij} \hat \psi^\dagger_i \hat \psi_j$ and/or $\Delta H_{bh}=h_{ij} \hat \psi_i \tilde \psi_j$, rearranging qubits.  We will also assume that there is a ``latency time" $\Delta T= R\Delta N$, such that $\Delta H_{bh}(T)$ only acts nontrivially on the first $N-\Delta N$ qubits; before the latency time, the internal qubits in \eqref{HawkQ} are unscrambled.  Different forms for $\Delta H_{bh}$ may also follow from different choices of gauge to describe internal evolution.  
@@ -554,7 +554,7 @@ This rate can be explained from a different argument.  For generic qubit state $
 This kind of argument -- which can be refined\footnote{For {\it some} further discussion, see \cite{GiRo}.} -- sets the size of the couplings to the operators $\calo$, which we think of as acting on a ``quantum atmosphere" of the BH.  The same methods can be used to estimate the amplitude if the initial external state $|\psi_e\rangle$ is not vacuum, but instead something else, {\it e.g.} an incoming gravitational wave state\cite{BHQU}; that just changes which matrix element between external states enters in \eqref{matel}.  In either case, the ``nonviolence" assumption\cite{SGmodels,NVNL,NVUEFT,NVNLT,NVU,BHQU} is that the operator $\calo$ only transfers soft momenta and energies to the external state, {\it e.g.} with $\calo(1/R)$ sizes, although more general powers of $R$ can also be considered.  In qubit models, this is naturally implemented since the qubit excitations have energies $\sim 1/R$, as long as $\calo$ only acts on qubits that have begun to exit the horizon region.  The final result is that the interactions \eqref{HIex} not only yield entanglement transfer rates of size $\calo(1/R)$, but also 
 can give $\calo(1)$ modifications to scattering amplitudes which have energy and momentum transfers $\calo(1/R)$.  
 
-One can ask about other effects besides corrections to these amplitudes, {\it e.g.} on an infalling external observer.  From this outside perspective, a simple test is to inquire whether  \eqref{HIex} can give a significant coherent shift to the external hamiltonian.  To estimate the size of such a shift, consider the expectation value in a generic BH state,
+One can ask about other effects besides corrections to these amplitudes, {\it e.g.} on an infalling external observer.  From this outside perspective, a simple test is to inquire whether  \eqref{HIex} can give a significant coherent shift to the external Hamiltonian.  To estimate the size of such a shift, consider the expectation value in a generic BH state,
 \beq\label{HIexp}
 \Delta H_I^{eff} = \langle \psi_{bh}|\hat \psi_0^\dagger| \psi_{bh}\rangle \gamma \calo + h.c.\ .
 \eeq
@@ -564,9 +564,9 @@ The size can be estimated by expanding
 \eeq
 where for a generic state $|\psi_{bh}\rangle$, the states $ |\phi_1\rangle$, $ |\phi_2\rangle$ are generic states of the qubits excluding $\hat \calq_0$. Then the expectation value in \eqref{HIexp} is $\langle \phi_2|\phi_1\rangle$, which is also of order $2^{-N/2} = e^{-S_{bh}/2}$, and so such a coherent effect is exponentially small, as also found in \cite{NVU}.
 
-Another question is that of the effect on internal observers.  Note that the hamiltonian \eqref{HIex}, or its generalization to the case where  $\Delta H_{bh}$ also mixes  the infalling modes in $\tilde \calh$, has {\it no} effect on internal excitations until after the latency time $\Delta T$.  This could be very long as compared to the expected infall time, $\sim R$, of an infalling observer, and as noted may only become important at much longer times where deviations from nice slice evolution become important.  Once internal excitations do become mixed with the excitations on which $\Delta H_I$ acts (in the simple model, just $\hat \calq_0$), those excitations are non-trivially acted on, corresponding to, {\it e.g.}, particle creation or annihilation in the relevant modes.
+Another question is that of the effect on internal observers.  Note that the Hamiltonian \eqref{HIex}, or its generalization to the case where  $\Delta H_{bh}$ also mixes  the infalling modes in $\tilde \calh$, has {\it no} effect on internal excitations until after the latency time $\Delta T$.  This could be very long as compared to the expected infall time, $\sim R$, of an infalling observer, and as noted may only become important at much longer times where deviations from nice slice evolution become important.  Once internal excitations do become mixed with the excitations on which $\Delta H_I$ acts (in the simple model, just $\hat \calq_0$), those excitations are non-trivially acted on, corresponding to, {\it e.g.}, particle creation or annihilation in the relevant modes.
 
-Finally, we have not discussed the second term in \eqref{HIex}, arising from the hermitian conjugate.  Note that if the first term can lower the energy of the BH and produce an excitation in the atmosphere, this term has the opposite effect.  However, we can compare this situation to that of the cavity.  There, the interaction term between internal and external excitations, arising from the presence of the small hole, has the same nature: it can either transfer particles (and entanglement) out of the cavity, or back into the cavity.  The reason that transfer out dominates is due to phase space considerations:  there are many more states outside the cavity than inside, and when one accounts for the full hamiltonian, excitations will dominantly fill those external states after sufficiently long time.  We expect that a more complete dynamical model should exhibit such behavior.
+Finally, we have not discussed the second term in \eqref{HIex}, arising from the hermitian conjugate.  Note that if the first term can lower the energy of the BH and produce an excitation in the atmosphere, this term has the opposite effect.  However, we can compare this situation to that of the cavity.  There, the interaction term between internal and external excitations, arising from the presence of the small hole, has the same nature: it can either transfer particles (and entanglement) out of the cavity, or back into the cavity.  The reason that transfer out dominates is due to phase space considerations:  there are many more states outside the cavity than inside, and when one accounts for the full Hamiltonian, excitations will dominantly fill those external states after sufficiently long time.  We expect that a more complete dynamical model should exhibit such behavior.
 
 
 \section{Comparing models, and towards a more complete description}
@@ -589,10 +589,10 @@ Models for nonviolent unitarization that go beyond the qubit models surmount som
 
 As with the nonisometric models, one does pay the price of apparent nonlocality with respect to the semiclassical background BH geometry.  However, the interactions of nonviolent unitarization, while they can give order one corrections to amplitudes, only do so for situations with soft momentum and energy transfer, for example with characteristic wavenumber or energy $1/R$.  This has nearly negligible effect on small observers falling into a BH; put differently, the departures from the equivalence principle are likewise extremely modest, and vanish in the large-$R$ limit.
 
-Such interactions do not have the same kind of puzzling effects on the internal outgoing excitations as the nonisometric evolution.  However, through the combination of modified internal evolution due to $\Delta H_{bh}$ and the interactions $\Delta H_I$, this evolution is expected to have effects on  both ingoing and outgoing inside modes that depart from evolution described by LQFT, and which, {\it e.g.}, lead to disappearance of excitations.  Depending on the details of the model, this may only affect inside excitations after long times.  One motivation for this is if the departure from the nice-slice hamiltonian and evolution of LQFT is a small effect, and so only builds up after long-time evolution, where the nice slice gauge for early excitations becomes increasingly extreme.
+Such interactions do not have the same kind of puzzling effects on the internal outgoing excitations as the nonisometric evolution.  However, through the combination of modified internal evolution due to $\Delta H_{bh}$ and the interactions $\Delta H_I$, this evolution is expected to have effects on  both ingoing and outgoing inside modes that depart from evolution described by LQFT, and which, {\it e.g.}, lead to disappearance of excitations.  Depending on the details of the model, this may only affect inside excitations after long times.  One motivation for this is if the departure from the nice-slice Hamiltonian and evolution of LQFT is a small effect, and so only builds up after long-time evolution, where the nice slice gauge for early excitations becomes increasingly extreme.
 This evolution moreover could share the feature of hiding the effects of information transfer\cite{AEHPV} on inside excitations if the internal evolution via $\Delta H_{bh}$ is sufficiently complex.   
 
-One important question in the models we have described is whether the entanglement transfer from the BH is complete by the time that the BH disappears; otherwise one has a potentially problematic remnant.  The simple evolution described above, with combined scrambling of excitations and transfer via interactions, is analogous to the cavity model described in the introduction.  However, as a BH nears the end of its evolution, its rate of energy loss accelerates, which is different from the slowdown of information transfer expected in such a cavity model.  One expects that a more complete hamiltonian would describe an effect analogous to squeezing of the cavity to accelerate information transfer.  One effect that could at least partly account for this is an increase in the internal energy levels with decreasing BH size.  Further aspects of a more complete description of evolution are to be explored in future work.
+One important question in the models we have described is whether the entanglement transfer from the BH is complete by the time that the BH disappears; otherwise one has a potentially problematic remnant.  The simple evolution described above, with combined scrambling of excitations and transfer via interactions, is analogous to the cavity model described in the introduction.  However, as a BH nears the end of its evolution, its rate of energy loss accelerates, which is different from the slowdown of information transfer expected in such a cavity model.  One expects that a more complete Hamiltonian would describe an effect analogous to squeezing of the cavity to accelerate information transfer.  One effect that could at least partly account for this is an increase in the internal energy levels with decreasing BH size.  Further aspects of a more complete description of evolution are to be explored in future work.
 
 
 
