--- a/1201.1037/unitBH-4.tex
+++ b/1201.1037/unitBH-4.tex
@@ -612,7 +612,7 @@ and satisfies
 %
 
 
-The hamiltonian is given by
+The Hamiltonian is given by
 %
 \eqn\hgen{N{\cal H} = \hf N(\pi^2 + g^{ij}\partial_i \phi \partial_j \phi )+ N^i \pi\partial_i\phi \ , }
 %
@@ -733,7 +733,7 @@ this state may be written, somewhat formally, as
 %
 \eqn\stateexp{|0\rangle_{X^-} = {1\over\sqrt{Z}} \sum_{\{n_\omega\}} e^{-{\beta\over 2} H} |\widehat{\{n_\omega\}}\rangle|\{n_\omega\}\rangle = \prod_\omega S(\omega)|\hat 0\rangle|0\rangle\ .}
 %
-Here $H$ is the Schwarzschild hamiltonian,
+Here $H$ is the Schwarzschild Hamiltonian,
 %
 \eqn\schwH{H=\int_0^\infty d\omega \omega n_\omega}
 % 
@@ -1039,7 +1039,7 @@ Such evolution is parameterized by finite-dimensional matrices
 %
 \eqn\hawkmodt{U(\Delta T)(|\hat a\rangle |{\hat I}\rangle|I\rangle) = U_{\ahat {\hat I} I}^{{\hat a}'{I}'} |{\hat a}'\rangle |{ I}'\rangle  \ ;}
 %
-we also expect that for small $\Delta T$, $U$ is close to unity and so may be parameterized in ``hamiltonian" form.
+we also expect that for small $\Delta T$, $U$ is close to unity and so may be parameterized in ``Hamiltonian" form.
 
 Simple models for such evolution can be given by describing the states in terms of qubits\refs{\HaPr,\Mathurrev,\ModelsU}, and within these models some examples of evolution were outlined in \ModelsU.  (Related models appear in \refs{\AveryNB}.)  Modeling the information as contained in one such qubit mode with frequency $\omega$, one is
 %
